# pygeolocate

./: .gitignore  CODE_OF_CONDUCT.md  FUNDING.yml  LICENSE  README.md  pyproject.toml  setup.py
git-versions/pygeolocate-1.0.10/: countries_csv.py  structures.py
git-versions/pygeolocate-1.0.8/: pygeolocate.py  structures.py
pygeolocate/: __init__.py  countries.csv  pygeolocate.py  structures.py
pygeolocate/examples/: get_country_by_full_name.py  get_country_by_partial_name.py
pylocate/: __init__.py
pylocate/csv-files/: countries.csv
